# ai-job-operations-search-assistant

./: .env.example  .gitignore  Makefile  README.md  analyzer.py  docker-compose.yaml  main.py  pyproject.toml  schemas.py
app/auth/: api.py  dependencies.py  domain.py  errors.py  login.py  persistence.py  repository.py  schemas.py  tokens.py  unit_of_work.py
app/infrastructure/: settings.py
app/job_preferences/: api.py  dependencies.py  domain.py  replace.py  repository.py  schemas.py
app/vacancies/: api.py  errors.py
backend/: alembic.ini  main.py
backend/app/auth/: dependencies.py  passwords.py  registration.py  schemas.py  tokens.py
backend/app/infrastructure/: database.py  settings.py
backend/app/job_preferences/: persistence.py  unit_of_work.py
backend/app/vacancies/: analyze.py  analyzer.py  dependencies.py  schemas.py
backend/migrations/versions/: 980e44242de1_create_users_table.py  cd9f463d5756_create_job_preference_table.py
backend/tests/: test_auth_schemas.py  test_passwords.py  test_registration.py  test_unit_of_work.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/app/: AppLayout.tsx  AppRouter.tsx
frontend/src/features/auth/: AuthProvider.tsx  LoginPage.tsx  ProtectedRoute.tsx  RegisterPage.tsx  api.ts  authContext.ts  types.ts  useAuth.ts
frontend/src/features/job-preferences/: JobPreferenceCard.tsx  JobPreferenceEditor.tsx  JobPreferencesPage.tsx  api.ts  types.ts
migrations/: env.py
tests/: fakes.py  test_analyzer.py  test_main.py  test_registration.py
(+6 files in other folders)
