[project]
name = "ai-job-search-operations-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "openai>=2.45.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
