[project]
name = "ai-job-search-operations-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "openai>=2.45.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
